# imgproc

./: .gitignore  CMakeLists.txt  README.md
include/: Controller.hpp  GuiController.hpp
include/cli/: Controller.hpp  GuiController.hpp
include/core/: Histogram.hpp  Image.hpp  StructuralElement.hpp  core.hpp
include/core/utils/: BasicUtils.hpp  CharacteristicUtils.hpp  ErrorMeasureUtils.hpp  FrequencyDomainUtils.hpp  FrequencyFiltrationUtils.hpp  FrequencyUtils.hpp  GeometricUtils.hpp  LinearFiltrationUtils.hpp  MorphologicalUtils.hpp  NoiseRemovalUtils.hpp  NonLinearFiltrationUtils.hpp  QualityImprovementUtils.hpp  SegmentationUtils.hpp
include/gui/: SimpleGui.hpp  SimpleGuiCV.hpp
include/image/: Image.hpp  ImageCV.hpp
include/image/utils/: BasicUtils.hpp
include/img/: Histogram.hpp  Image.hpp  ImageCV.hpp  utils.hpp
include/img/utils/: BasicUtils.hpp  CharacteristicUtils.hpp  ErrorMeasureUtils.hpp  GeometricUtils.hpp  LinearFiltrationUtils.hpp  NoiseRemovalUtils.hpp  NonLinearFiltrationUtils.hpp  QualityImprovementUtils.hpp  utils.hpp
include/opencv/: OpenCVImageHelper.hpp  OpenCVWindows.hpp
include/test/: ImageFixture.hpp
src/: Controller.cpp  GuiController.cpp  main.cpp  main_gui.cpp  main_nogui.cpp
src/cli/: Controller.cpp  GuiController.cpp  main_gui.cpp  main_nogui.cpp
src/core/: Histogram.cpp  Image.cpp  StructuralElement.cpp
src/core/utils/: BasicUtils.cpp  CharacteristicUtils.cpp  ErrorMeasureUtils.cpp  FrequencyDomainUtils.cpp  FrequencyFiltrationUtils.cpp  FrequencyUtils.cpp  GeometricUtils.cpp  LinearFiltrationUtils.cpp  MorphologicalUtils.cpp  NoiseRemovalUtils.cpp  NonLinearFiltrationUtils.cpp  QualityImprovementUtils.cpp  SegmentationUtils.cpp
src/gui/: SimpleGui.cpp  SimpleGuiCV.cpp
src/image/: Image.cpp  ImageCV.cpp
src/image/utils/: BasicUtils.cpp
src/img/: Histogram.cpp  Image.cpp  ImageCV.cpp
src/img/utils/: BasicUtils.cpp  CharacteristicUtils.cpp  ErrorMeasureUtils.cpp  GeometricUtils.cpp  LinearFiltrationUtils.cpp  NoiseRemovalUtils.cpp  NonLinearFiltrationUtils.cpp  QualityImprovementUtils.cpp
src/opencv/: OpenCVImageHelper.cpp  OpenCVWindows.cpp
test/: BGNE_UtilsTest.cpp  BasicUtilsTest.cpp  GeometricUtilsTest.cpp  ImageFixture.cpp  ImageTest.cpp  NoiseRemovalUtilsTest.cpp  master.cpp
test/core/: ImageTest.cpp  StructuralElementTest.cpp
test/core/utils/: BasicUtilsTest.cpp  FrequencyDomainUtilsTest.cpp  FrequencyUtilsTest.cpp  GeometricUtilsTest.cpp  MorphologicalUtilsTest.cpp  NoiseRemovalUtilsTest.cpp  SegmentationUtilsTest.cpp
test/opencv/: OpenCVImageHelperTest.cpp
